--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
+    "sonner": "^1.2.4",
     "tailwindcss": "^3.3.5",
     "zustand": "^4.4.7"
   },
