--- a/package.json
+++ b/package.json
@@ -10,30 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-slider": "^1.1.2",
-    "autoprefixer": "^10.4.16",
-    "axios": "^1.6.2",
-    "clsx": "^2.0.0",
-    "howler": "^2.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.20.0",
-    "sonner": "^1.2.4",
-    "tailwindcss": "^3.3.5",
-    "zustand": "^4.4.7"
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-slider": "1.1.2",
+    "autoprefixer": "10.4.16",
+    "axios": "1.6.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
+    "howler": "2.2.4",
+    "lucide-react": "0.299.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.12.0",
+    "react-query": "3.39.3",
+    "react-router-dom": "6.20.0",
+    "sonner": "1.2.4",
+    "tailwind-merge": "2.1.0",
+    "tailwindcss": "3.3.5",
+    "tailwindcss-animate": "1.0.7",
+    "zustand": "4.4.7"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "eslint": "8.53.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.4",
+    "typescript": "5.2.2",
+    "vite": "5.0.0"
   }
 }
