--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-slider": "1.1.2",
     "autoprefixer": "10.4.16",
     "axios": "1.6.2",
+    "birdies": "^1.5.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "howler": "2.2.4",
     "lucide-react": "0.299.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "4.12.0",
     "react-query": "3.39.3",
     "react-router-dom": "6.20.0",
