--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwind-merge": "2.1.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "1.0.7",
+    "tailwindcss-animated": "^1.0.1",
     "zustand": "4.4.7"
   },
   "devDependencies": {
